// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      class="euiToken euiToken--euiColorVis5 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
    >
      <span
        aria-label="Geo point field"
        data-euiicon-type="tokenGeo"
        title="Geo point field"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        t.t.test
      </span>
    </span>
  </div>
</div>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      class="euiToken euiToken--euiColorVis0 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
    >
      <span
        aria-label="Number field"
        data-euiicon-type="tokenNumber"
        title="Number field"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        test.test.test
      </span>
    </span>
  </div>
</div>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <span
      class="euiToken euiToken--euiColorVis1 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
    >
      <span
        aria-label="String field"
        data-euiicon-type="tokenString"
        title="String field"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        test
      </span>
    </span>
  </div>
</div>
`;
